Agregado del header y el fotter a los archivo contacto y registro

--- a/contacto.html
+++ b/contacto.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="shortcut icon" href="./img/logoGym.png" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header></header>
+    <header>        
+        <nav class="navegador">
+            <a href="quienessomos.html" class="menu">Quienes somos</a>
+            <a href="clases.html" class="menu">Sumate</a>
+            <a href="index.html" class="menu"><img src="./img/logoGym.png" alt="Logo del gim" id="logoGym"></a>
+            <a href="contacto.html" class="menu">Contacto</a>
+            <a href="registro.html" class="menu">Registro</a>            
+        </nav>
+        <hr>
+    </header>
+
     <main>
         <h2>Conmunicate con nosotros</h2>
         <label for="nombre">Nombre: </label>
@@ -25,5 +37,22 @@
         <br><br>
         <input type="submit" value="Enviar Consulta" onclick="alert('Gracias por tu consulta!!');">
     </main>
+
+    <footer>
+        <hr>
+        <nav class="hipervinculos">
+            <a href="https://www.facebook.com/" target="_blank">
+                <img src="./img/facebook.png" alt="facebook">
+            </a>
+            <a href="https://twitter.com/home" target="_blank">
+                <img src="./img/twitterx.png" alt="twitterx">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img src="./img/instagram.png" alt="instagram">
+            </a>
+            <p>Sitio desarrollado por alumnos de</p>
+            <a href="https://buenosaires.gob.ar/educacion/codo-codo-40" target="_blank"><img src="./img/codoacodo.png" alt="logo codo a codo" id="logoCodoCodo"></a>
+        </nav>
+        </footer>
 </body>
 </html>
