--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM.HTML</title>
     <link rel="shortcut icon" href="./img/logoGym.png" type="image/x-icon">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Quicksand&family=Righteous&family=Skranji:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
