--- a/servicios.html
+++ b/servicios.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abonos y clases</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Righteous&family=Skranji:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="container-abonos"style="display: flex; justify-content: center; margin-bottom:5%"></section>
+    <section class="container-abonos"style="display: flex; <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Righteous&family=Skranji:wght@400;700&display=swap" rel="stylesheet"> justify-content: center; margin-bottom:5%"></section>
         
 
 
     </section>
-    <section class="container-clases" style="display: flex; justify-content: center;">
+    <section class="container-clases" style="display: flex; font-family: Quicksand;
+    justify-content: center;">
 
     </section>
     <div class="clase"></div>
