--- a/contacto.html
+++ b/contacto.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,43 +13,50 @@
 
     <link rel="stylesheet" href="./CSS/contacto.css">
 </head>
+
 <body>
-    <header>        
+    <header>
         <nav class="navegador">
             <a href="quienessomos.html" class="menu">Quienes somos</a>
             <a href="clases.html" class="menu">Sumate</a>
             <a href="index.html" class="menu"><img src="./img/logoGym.png" alt="Logo del gim" id="logoGym"></a>
             <a href="contacto.html" class="menu">Contacto</a>
-            <a href="registro.html" class="menu">Registro</a>            
+            <a href="registro.html" class="menu">Registro</a>
         </nav>
     </header>
 
     <main>
-        <h2>COMUNICATE CON NOSOTROS</h2>
-       
-        <form action="show-data.html" target="_blank" method="get" class="formulario">
-            <div class="formmulario-nombre">
-                <label for="nombre" class="label-nombre">Nombre: </label>
-                <input type="text" name="nombre" id="nombre" class="input">
-            </div>
-            <div class="formmulario-apellido">
-                <label for="apellido">Apellido: </label>
-                <input type="text" name="apellido" id="apellido" class="input">
-            </div>
-            <div class="formmulario-tel">
-                <label for="tel">Teléfono: </label>
-                <input type="tel" name="tel" id="telefono" class="input">
-            </div>
-            <div class="formmulario-mail">
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" class="input">
-            </div>
-            <div class="formmulario-textarea">
-                <textarea name="Comentario" id="Comentario"  placeholder="Consultas, comentarios y sugerencias..." class="input"></textarea>
-            </div>
-            <div class="formulario-buttom">
-                <input type="submit" value="Enviar Consulta" onclick="alert('Gracias por tu consulta!!');" class="buttom">
-        </form>
+
+        <div class="contenedor-form">
+            <h2>COMUNICATE CON NOSOTROS</h2>
+            <form action="show-data.html" target="_blank" method="get" class="formulario">
+                <div class="formulario-nombre">
+                    <label for="nombre" class="label-nombre">Nombre: </label>
+                    <input type="text" name="nombre" id="nombre" class="input" autofocus>
+                </div>
+                <div class="formulario-apellido">
+                    <label for="apellido">Apellido: </label>
+                    <input type="text" name="apellido" id="apellido" class="input">
+                </div>
+                <div class="formulario-tel">
+                    <label for="tel">Teléfono: </label>
+                    <input type="tel" name="telefono" id="telefono" class="input">
+                </div>
+                <div class="formulario-mail">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" class="input">
+                </div>
+                <div class="formulario-textarea">
+                    <textarea name="Comentario" id="Comentario" placeholder="Consultas, comentarios y sugerencias..."
+                        class="input"></textarea>
+                </div>
+                <div class="formulario-buttom">
+                    <input type="submit" value="Enviar Consulta" onclick="alert('Gracias por tu consulta!!');"
+                        class="buttom">
+                </div>
+            </form>
+        </div>
+        <br><br>
     </main>
 
     <footer>
@@ -63,8 +71,10 @@
                 <img src="./img/instagram.png" alt="instagram">
             </a>
             <p>Sitio desarrollado por alumnos de</p>
-            <a href="https://buenosaires.gob.ar/educacion/codo-codo-40" target="_blank"><img src="./img/codoacodo.png" alt="logo codo a codo" id="logoCodoCodo"></a>
+            <a href="https://buenosaires.gob.ar/educacion/codo-codo-40" target="_blank"><img src="./img/codoacodo.png"
+                    alt="logo codo a codo" id="logoCodoCodo"></a>
         </nav>
-        </footer>
+    </footer>
 </body>
+
 </html>
