Arreglo del redireccionamiento en el logo y font del pie de pagina

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <a href="#" class="enlace">
+        <a href="index.html" class="enlace">
             <img src="./img/logoGymInicio.png" alt="" class="logo">
         </a>
         <ul>
