--- a/servicios.html
+++ b/servicios.html
@@ -26,7 +26,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars"></i>
             </label>
-            <a href="#" class="enlace">
+            <a href="index.html" class="enlace">
                 <img src="./img/logoGymInicio.png" alt="" class="logo">
             </a>
             <ul>
