--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 
@@ -36,7 +37,7 @@
 
     <main>    
         <section>
-            <div class="cuerpo">
+            <div class="cuerpo animate__animated animate__zoomIn">
                 <a href="servicios.html"><img src="./img/Sin título-1.png" alt="slogan" id="slogan"></a>
                 <h2>¿QUE ESTAS ESPERANDO PARA CAMBIAR TU VIDA?</h2>
                 <h2>SUMATE YA A LA COMUNIDAD HTML GYM</h2>
