Estructura de la pagina avanzada

--- a/servicios.html
+++ b/servicios.html
@@ -37,6 +37,13 @@
             </ul>
         </nav>
         </header>  
+        <section class="clima">
+            <h4>Cual es el clima que te va a acompaniar en el entrenamiento de hoy?</h4>
+            <img src="https://cdn-icons-png.flaticon.com/512/3208/3208756.png" width="75px" alt="">
+            <span style="font-weight: bold;">Temperatura °</span><p>Clima traido con una API. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+
+        </section>
     <section class="container-abonos">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&family=Righteous&family=Skranji:wght@400;700&display=swap" rel="stylesheet"> justify-content: center; margin-bottom:5%"></section>
