--- a/servicios.html
+++ b/servicios.html
@@ -46,7 +46,7 @@
             <h4>Cual es el clima que te va a acompaniar en el entrenamiento de hoy?</h4>
             <img src="https://cdn-icons-png.flaticon.com/512/3208/3208756.png" width="75px" alt="">
             <span style="font-weight: bold;">Temperatura °</span>
-            <p>Clima traido con una API. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Teststeando si cambia.Clima traido con una API. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </section>
     <div class="main">
