agregado quienes somos

--- a/contacto.html
+++ b/contacto.html
@@ -27,13 +27,13 @@
                 <img src="./img/logoGymInicio.png" alt="" class="logo">
             </a>
             <ul>
-                <li><a href="acercade.html" class="menu">QUIENES SOMOS</a></li>
+                <li><a href="quienes-somos.html" class="menu">QUIENES SOMOS</a></li>
                 <li><a href="servicios.html" class="menu">SUMATE</a></li>
                 <li><a href="contacto.html" class="menu">CONTACTO</a></li>
                 <li><a href="registro.html" class="menu">REGISTRO</a></li>
             </ul>
         </nav>
-        </header>  
+        </header>
 
     <main>
 
