--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -52,7 +52,7 @@
         <div class="seccionB">
             
                 <div class="imagen">
-                    <img src="./img/vida saludable.jpg" alt="imgen vida saludable">
+                    <img src="./img/vida-saludable.jpg" alt="imgen vida saludable">
                     </div>
             <div class="contenido-texto">
                 <h3>LA MISION PRINCIPAL</h3>
