conexion API clima

--- a/servicios.html
+++ b/servicios.html
@@ -45,8 +45,11 @@
         <div class="widget">
             <h4>Cual es el clima que te va a acompaniar en el entrenamiento de hoy?</h4>
             <img src="https://cdn-icons-png.flaticon.com/512/3208/3208756.png" width="75px" alt="">
-            <span style="font-weight: bold;">Temperatura °</span>
-            <p>Teststeando si cambia.Clima traido con una API. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <span style="font-weight: bold;">Temperatura:</span>
+            <span class="temp" style="font-weight: bold;"></span>
+            <div class="summary">-</div>
+            <div class="location">-</div>
+        
         </div>
     </section>
     <div class="main">
@@ -99,6 +102,7 @@
         </div>
     </footer>
     <script src="./js/informacion.js"></script>
+    <script src="./JS/clima.js"></script>
 </body>
 
 </html>
