--- a/registro.html
+++ b/registro.html
@@ -41,7 +41,7 @@
         <div class="contenedor-form">
             <form class="formulario" id="formulario" action="show-data.html" method="get" target="_blank">
                 
-                <h2>Formulario de registro</h2>
+                <h2>FORMULARIO DE REGRISTRO</h2>
 
                 <!--Grupo nombre-->
                 <div class="formulario_grupo" id="grupo_nombre">
