--- a/contacto.html
+++ b/contacto.html
@@ -38,7 +38,7 @@
     <main>
 
         <div class="contenedor-form">
-            <h2>Comunicate con nosotros</h2>
+            <h2>COMUNICATE CON NOSTROS</h2>
             <form action="show-data.html" target="_blank" method="get" class="formulario">
                 <div class="formulario-nombre">
                     <label for="nombre" class="label-nombre">Nombre: </label>
