--- a/CRUD/front/producto_nuevo.html
+++ b/CRUD/front/producto_nuevo.html
@@ -8,14 +8,15 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-</head>
+  <link rel="stylesheet" href="estilo.css">
+  </head>
 <body>
   <header id="header">
     <!-- place navbar here -->
   </header>
   <main>
     <div class="container" id="app">
-       <form  style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
+       <form  class="formu" style="margin:10px auto ; width: 400px; padding: 20px;">
         <h1>Alta de Producto</h1>
         <div class="mb-3">
           <label for="nombre">Nombre</label>
