La pagina fetchea las actividades directamente desde la bdd, la api del clima ahora trae la temperatura de bsas, esta estatica peero al menos no dice moscu jaja. Esta creado el formulario en el index del crud, faltaria hacerle la logica de validar usuario y pass

--- a/CRUD/front/index.html
+++ b/CRUD/front/index.html
@@ -22,7 +22,21 @@
         <header id="header">
                         
         </header>
-        <main></main>
+        <main>
+            <div class="container" id="app">
+                <form  class="formu" style="margin:10px auto ; width: 400px; padding: 20px;">
+            <div class="mb-3">
+                <label for="nombre">Usuario</label>
+                <input type="text" name="nombre" id="nombre" v-model="nombre">
+              </div>
+              <div class="mb-3">
+                <label for="horarios">Password</label>
+                <input type="text" name="horarios" id="horarios" v-model="horarios">
+              </div>
+            </form>
+        </div>
+
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
