--- a/servicios.html
+++ b/servicios.html
@@ -102,6 +102,7 @@
         </div>
     </footer>
     <script src="./js/informacion.js"></script>
+    <script src="./js/informacioApi.js"></script>
     <script src="./JS/clima.js"></script>
 </body>
 
