modificacion en servicios

--- a/servicios.html
+++ b/servicios.html
@@ -43,13 +43,13 @@
     </header>
     <section class="clima">
         <div class="widget">
-            <h4>Cual es el clima que te va a acompaniar en el entrenamiento de hoy?</h4>
+            <h4>¿Cuál es el clima que te va a acompañar en el entrenamiento de hoy?</h4>
             <img src="https://cdn-icons-png.flaticon.com/512/3208/3208756.png" width="75px" alt="">
             <span style="font-weight: bold;">Temperatura:</span>
             <span class="temp" style="font-weight: bold;"></span>
             <div class="summary">-</div>
             <div class="location">-</div>
-        
+
         </div>
     </section>
     <div class="main">
@@ -62,12 +62,12 @@
         </section>
         </section>
         <div class="main-clases">
-        <h2>Descubre nuestras actividades</h2>
-        <section class="container-clases">
-            
+            <h2>Descubre nuestras actividades</h2>
+            <section class="container-clases">
 
-        </section>
-    </div>
+
+            </section>
+        </div>
     </div>
     <div class="contenido"></div>
     <footer class="pie-pagina">
