--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
             <div class="cuerpo animate__animated animate__zoomIn">
                 <a href="servicios.html"><img src="./img/Sin título-1.png" alt="slogan" id="slogan"></a>
-                <h2>¿QUE ESTAS ESPERANDO PARA CAMBIAR TU VIDA?</h2>
+                <h2>¿QUÉ ESTAS ESPERANDO PARA CAMBIAR TU VIDA?</h2>
                 <h2>SUMATE YA A LA COMUNIDAD HTML GYM</h2>
             </div>
         </section>        
